WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267102
REGRESSION (
270199@main
): [iOS] Viewport units are incorrect in Safari after entering and exiting fullscreen
https://bugs.webkit.org/show_bug.cgi?id=267102
Summary
REGRESSION (270199@main): [iOS] Viewport units are incorrect in Safari after ...
Aditya Keerthi
Reported
2024-01-04 15:11:41 PST
https://commits.webkit.org/270199@main
resets overridden layout parameters to garbage values due to re-implementations of existing WKWebView methods with a different return type: ``` @property (nonatomic, readonly) std::optional<CGSize> _minimumUnobscuredSizeOverride; @property (nonatomic, readonly) std::optional<CGSize> _maximumUnobscuredSizeOverride; ``` But these were already implemented as methods returning CGSize.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-04 15:12:02 PST
<
rdar://problem/120496571
>
Aditya Keerthi
Comment 2
2024-01-04 15:54:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22407
EWS
Comment 3
2024-01-05 00:45:36 PST
Committed
272679@main
(53929a96966c): <
https://commits.webkit.org/272679@main
> Reviewed commits have been landed. Closing PR #22407 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug