Source/WebKit/UIProcess/API/ios/WKWebViewIOS.h
@@ -201,9 +201,6 @@ enum class TapHandlingResult : uint8_t;
 
 @property (nonatomic, readonly) BOOL _haveSetUnobscuredSafeAreaInsets;
 @property (nonatomic, readonly) BOOL _hasOverriddenLayoutParameters;
-@property (nonatomic, readonly) std::optional<CGSize> _viewLayoutSizeOverride;
-@property (nonatomic, readonly) std::optional<CGSize> _minimumUnobscuredSizeOverride;
-@property (nonatomic, readonly) std::optional<CGSize> _maximumUnobscuredSizeOverride;
 - (void)_resetContentOffset;
 - (void)_resetUnobscuredSafeAreaInsets;
 - (void)_resetObscuredInsets;
